# buildplane

./: .gitignore  .gsd  .mergify.yml  Buildplane_Overview.md  CLAUDE.md  README.md  TASK_SUMMARY.md  biome.json  debug-graph.json  debug-loader.js  dump-error.js  fix-graph-events-missing.js  fix-graph-events.js  package.json  packet.json  patch-cli-test.js  patch-cli.js  patch-events.js  patch-exports.js  patch-git-adapter.js  patch-orchestrator.js  patch-snapshot.js  patch-store.js  patch-test.js  patch-tests.js  patch.js  pnpm-lock.yaml  run-graph-debug.js  run-graph-debug10.js  run-graph-debug12.js  run-graph-debug13.js  run-graph-debug14.js  run-graph-debug15.js  run-graph-debug16.js  run-graph-debug17.js  run-graph-debug19.js  run-graph-debug2.js  run-graph-debug20.js  run-graph-debug21.js  run-graph-debug22.js  (+38 more)
.buildplane/: project.json  state.db
.changeset/: amber-fixtures-scope.md  code-edit-side-effect-vocab.md  config.json  dispatch-default-model.md  dynamic-planforge-tasks.md  gap-10-authorization-envelope.md  gap-5-priorwork-handoff.md  gap-9-planning-worker.md  gap3-acceptance-default-on.md  gap3-provision-deps-hook.md  gap6-planforge-recover.md  gap8-serial-reanchor.md  glob-semantics-unification.md  honest-web-doctor-contracts.md  m1-s4-keyring-signing.md  m1-s6-tape-checkpoints.md  m2-s1-planforge-package.md  m2-s2-tape-event-vocabulary.md  m2-s3-planforge-admit.md  m2-s4-dispatch.md  m2-s5-activity-bracketing.md  m2-s6-receipt-live-tape-export.md  m2-s7b-explicit-resume.md  m3-s1-capability-broker.md  m3-s7-planforge-plan-bundle.md  m3-s7b-run-command-enforcement.md  m4-s2-acceptance-recorded.md  m4-s3-finalization-gate.md  m4-s3-head-advance-fail-closed.md  m5-s1-operator-decision-recorded.md  m5-s2-storage-read-surface.md  m5-s3-extract-inspector-projection.md  m5-s4-operator-decision-port.md  m5-s8-bp-web.md  m6-demo-dispatch-worker-contract.md  m6-f1-resume-fail-closed.md  m6-f2-dispatch-tool-events.md  m6-r1-loop-terminal-fidelity.md  m6-r2-recover-decisions.md  m6-r3-origin-guard.md  (+22 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.husky/: pre-push
config/: trust-spine-release-trust-root.json
docs/: jtbd-competitive-analysis.md  jtbd.md  ledger.md  (+4 more)
native/: Cargo.toml  README.md
native/crates/bp-authority-broker/: Cargo.toml
native/crates/bp-authority-broker/src/: admission_protocol.rs  confinement.rs  lib.rs  promotion_execution.rs  promotion_git.rs  protocol.rs  tests.rs
native/crates/bp-cli/: Cargo.toml
native/crates/bp-cli/src/: fork_cli.rs  governed_authority.rs  ledger_cli.rs  main.rs  memory_cli.rs  pack_export.rs
native/crates/bp-config/: Cargo.toml
native/crates/bp-config/src/: lib.rs
native/crates/bp-core/: Cargo.toml
native/crates/bp-core/src/: lib.rs
native/crates/bp-fork/: Cargo.toml
native/crates/bp-fork/src/: lib.rs  plan.rs  planner.rs
native/crates/bp-fork/tests/: planner.rs
native/crates/bp-host-claude/: Cargo.toml
native/crates/bp-host-claude/src/: lib.rs
native/crates/bp-host-codex/: Cargo.toml
native/crates/bp-host-codex/src/: lib.rs
native/crates/bp-host-registry/: Cargo.toml
native/crates/bp-host-registry/src/: lib.rs
native/crates/bp-host-sdk/: Cargo.toml
native/crates/bp-host-sdk/src/: lib.rs
native/crates/bp-ledger/: Cargo.toml
native/crates/bp-ledger-macros/: Cargo.toml
native/crates/bp-ledger-macros/src/: lib.rs
native/crates/bp-ledger-macros/tests/: secret_redaction.rs
native/crates/bp-ledger/src/: canonicalize.rs  error.rs  event.rs  id.rs  keyring.rs  kind.rs  lib.rs  serve.rs  signing.rs  tape_export.rs  types.rs
native/crates/bp-ledger/src/payload/: acceptance.rs  activity.rs  activity_claim.rs  capability_broker.rs  checkpoint.rs  git_checkpoint.rs  mod.rs  model_evidence.rs  model_io.rs  operator_decision.rs  plan_lifecycle.rs  release_evaluation.rs  run_lifecycle.rs  tool_io.rs  trust_spine.rs  unit_lifecycle.rs  workspace.rs
native/crates/bp-ledger/src/storage/: cas.rs  mod.rs  sqlite.rs
native/crates/bp-ledger/tests/: acceptance.rs  activity.rs  activity_claim.rs  append_only.rs  canonicalize.rs  capability_denied.rs  cas.rs  governed_promotion_authority.rs  m2_digest_contract.rs  model_evidence.rs  model_intent_issuer.rs  operator_decision.rs  plan_lifecycle.rs  promotion_canonicalization.rs  promotion_execution_claim.rs  protocol_state.rs  release_evaluation.rs  round_trip.rs  run_admission.rs  run_lifecycle.rs  signed_tape_fixture.rs  signing_on_append.rs  tape_checkpoints.rs  trust_spine.rs  verification_on_read.rs  workflow_graph.rs  workflow_graph_v2.rs
native/crates/bp-memory/: Cargo.toml
native/crates/bp-memory/src/: lib.rs
native/crates/bp-pack-inspection/: Cargo.toml
native/crates/bp-pack-inspection/src/: lib.rs
native/crates/bp-pack-loader/: Cargo.toml
native/crates/bp-pack-loader/src/: lib.rs
native/crates/bp-pack-manifest/: Cargo.toml
native/crates/bp-pack-manifest/src/: lib.rs
native/crates/bp-provider-anthropic/: Cargo.toml
native/crates/bp-provider-anthropic/src/: lib.rs
native/crates/bp-provider-openai/: Cargo.toml
native/crates/bp-provider-openai/src/: lib.rs
native/crates/bp-provider-sdk/: Cargo.toml
native/crates/bp-provider-sdk/src/: lib.rs
native/crates/bp-replay/: Cargo.toml
native/crates/bp-replay/src/: activity_decision.rs  activity_decision_tests.rs  engine.rs  lib.rs  otel_projection.rs  reader.rs  state.rs  tape_integrity.rs  transitions.rs  trusted_recovery.rs
native/crates/bp-replay/tests/: fast_forward.rs  graph_bound_dispatch_v4.rs  iteration.rs  planforge_cycle.rs  tape_integrity.rs  transitions.rs  trusted_recovery.rs  workflow_graph.rs  workflow_reducer.rs
native/crates/bp-runtime/: Cargo.toml
native/crates/bp-runtime/src/: lib.rs
native/crates/bp-storage-sqlite/: Cargo.toml
native/crates/bp-storage-sqlite/src/: lib.rs
native/crates/bp-test-support/: Cargo.toml
native/crates/bp-test-support/src/: lib.rs
native/crates/bp-ui-terminal/: Cargo.toml
native/crates/bp-ui-terminal/src/: lib.rs
native/packs/superclaude/: pack.toml
native/packs/supercodex/: pack.toml
(+532 files in other folders)
