[workspace]
resolver = "2"
members = [
  "crates/bp-cli",
  "crates/bp-config",
  "crates/bp-core",
  "crates/bp-host-claude",
  "crates/bp-host-registry",
  "crates/bp-host-codex",
  "crates/bp-host-sdk",
  "crates/bp-ledger",
  "crates/bp-ledger-macros",
  "crates/bp-memory",
  "crates/bp-pack-inspection",
  "crates/bp-pack-loader",
  "crates/bp-pack-manifest",
  "crates/bp-provider-anthropic",
  "crates/bp-provider-openai",
  "crates/bp-provider-sdk",
  "crates/bp-runtime",
  "crates/bp-storage-sqlite",
  "crates/bp-test-support",
  "crates/bp-ui-terminal",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Buildplane Contributors"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
futures-core = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }
sha2 = "0.10"
typeshare = "1"

bp-ledger = { path = "crates/bp-ledger" }
bp-ledger-macros = { path = "crates/bp-ledger-macros" }

bp-config = { path = "crates/bp-config" }
bp-core = { path = "crates/bp-core" }
bp-host-claude = { path = "crates/bp-host-claude" }
bp-host-registry = { path = "crates/bp-host-registry" }
bp-host-codex = { path = "crates/bp-host-codex" }
bp-host-sdk = { path = "crates/bp-host-sdk" }
bp-memory = { path = "crates/bp-memory" }
bp-pack-inspection = { path = "crates/bp-pack-inspection" }
bp-pack-loader = { path = "crates/bp-pack-loader" }
bp-pack-manifest = { path = "crates/bp-pack-manifest" }
bp-provider-anthropic = { path = "crates/bp-provider-anthropic" }
bp-provider-openai = { path = "crates/bp-provider-openai" }
bp-provider-sdk = { path = "crates/bp-provider-sdk" }
bp-runtime = { path = "crates/bp-runtime" }
bp-storage-sqlite = { path = "crates/bp-storage-sqlite" }
bp-test-support = { path = "crates/bp-test-support" }
bp-ui-terminal = { path = "crates/bp-ui-terminal" }
