[package]
name = "bp-authority-broker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bp-ledger.workspace = true
bp-replay.workspace = true
ed25519-dalek.workspace = true
libc.workspace = true
thiserror.workspace = true

[dev-dependencies]
chrono.workspace = true
tempfile = "3"
