[package]
name = "bp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "buildplane-native"
path = "src/main.rs"

[dependencies]
bp-fork.workspace = true
bp-ledger.workspace = true
bp-memory.workspace = true
bp-pack-inspection.workspace = true
bp-pack-loader.workspace = true
bp-replay.workspace = true
bp-storage-sqlite.workspace = true
bp-ui-terminal.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
