[package]
name = "bp-fork"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bp-ledger.workspace = true
bp-replay.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
chrono.workspace = true
