[package]
name = "bp-replay"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bp-ledger.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
ed25519-dalek.workspace = true
tempfile = "3"
